--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <link href="lib/animate/animate.min.css" rel="stylesheet">
         <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
         <link href="css/YTPlayer.css" rel="stylesheet" />
-        <link rel="icon" href="/img/logo.png" type="image/icon type">
+        <link rel="icon" href="/img/titlelogo.png" type="image/icon type" width="75px">
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
     </head>
@@ -118,36 +118,97 @@
                 <div class="owl-carousel">
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="img/banner-1.png" alt="Image">
+                            <img src="img/banner1.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
-                            <h1> General checkup</h1>
+                            <h1> CAR WASHING</h1>
+                            <p>
+                                Happiness for all Drivers is driving a Car after a Wash!!!
+                            </p>
+                            <a class="btn btn-custom" href="#contact">Explore More</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="carousel-img">
+                            <img src="img/banner2.jpg" alt="Image">
+                        </div>
+                        <div class="carousel-text">
+                            <h1>Oil Service</h1>
+                            <p>
+                                Servicing your engine on time is key to a healthy car!! 
+                            </p>
+                            <a class="btn btn-custom" href="#contact">Explore More</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="carousel-img">
+                            <img src="img/banner3.jpg" alt="Image">
+                        </div>
+                        <div class="carousel-text">
+                            <h1>Wheel alignment</h1>
+                            <p>
+                                Balance your car's wheel to reach your favorite destination safely.
+                            </p>
+                            <a class="btn btn-custom" href="#contact">Explore More</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="carousel-img">
+                            <img src="img/banner6.png" alt="Image">
+                        </div>
+                        <div class="carousel-text">
+                            <h1>Body Shining</h1>
+                            <p>
+                                For a classy, shiny outing, get our Body Shining Services for your Car.
+                            </p>
+                            <a class="btn btn-custom" href="#contact">Explore More</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="carousel-img">
+                            <img src="img/banner5.jpeg" alt="Image">
+                        </div>
+                        <div class="carousel-text">
+                            <h1>Engine Scanning</h1>
                             <p>
                                 Take a moment to take care of your car with our inspection service and engine scanning for free of cost at your first visit.
                             </p>
                             <a class="btn btn-custom" href="#contact">Explore More</a>
                         </div>
                     </div>
+                   
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="img/banner-2.jpg" alt="Image">
+                            <img src="img/banner7.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
-                            <h1>Quality service for you</h1>
+                            <h1>Interior Cleaning</h1>
                             <p>
-                                Happiness is driving your car after a car wash.
+                                Get the cleanest and safest drive for all kinds of Seasons!!!
                             </p>
                             <a class="btn btn-custom" href="#contact">Explore More</a>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="img/banner-3.jpg" alt="Image">
+                            <img src="img/banner8.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
-                            <h1>Exterior & Interior Washing</h1>
+                            <h1> Auto Air Conditioning</h1>
                             <p>
-                                Our cleaning, booster, and wax will bring your car a new life
+                                Everyone loves the ultimate chill blasting from the car’s vents. We do it perfectly for you to chill out.
+                            </p>
+                            <a class="btn btn-custom" href="#contact">Explore More</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="carousel-img">
+                            <img src="img/banner4.jpg" alt="Image">
+                        </div>
+                        <div class="carousel-text">
+                            <h1>Tinkering & Painting </h1>
+                            <p>
+                                Touch up your buddy to fly like a rainbow on roads. And make others comment on your Car as WOW!!! 
                             </p>
                             <a class="btn btn-custom" href="#contact">Explore More</a>
                         </div>
@@ -162,7 +223,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="about-img">
-                            <img src="img/contact.jpg" alt="Image">
+                            <img src="img/contact.jpg" alt="Image"  >
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -178,7 +239,6 @@
                                 We offer a full range of services to vehicle owners in Coimbatore. 
                                 Our professionals know how to handle a wide range of car services. 
                                 Whether you drive a passenger car or medium-sized truck or SUV, our mechanics strive to ensure that your vehicle will be performing at its best before leaving our car shop. 
-                                Whether you drive a medium-sized truck or passenger car or SUV, our mechanics strive to ensure.
                             </p>
                             <a class="btn btn-custom" href="#contact">Learn More</a>
                         </div>
@@ -265,7 +325,7 @@
             <div class="container">
                 <div class="section-header text-center">
                     <p>REASON TO CHOOSE MD CAR CARE</p>
-                    <h2>Premium Car Services</h2>
+                    <!-- <h2>Premium Car Services</h2> -->
                 </div>
                 <div class="row">
                     <div class="col-lg-6 whydivs">
@@ -414,7 +474,7 @@
                                 </div>
                                 <div class="contact-info-text">
                                     <h3>Location</h3>
-                                    <p>Koundampalayam, Coimbatore.</p>
+                                    <p>Kavundampalayam, Coimbatore.</p>
                                 </div>
                             </div>
                             <div class="contact-info-item">
@@ -481,7 +541,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-contact">
                             <h2>Get In Touch</h2>
-                            <p><i class="fa fa-map-marker-alt"></i>Koundampalayam, Coimbatore</p>
+                            <p><i class="fa fa-map-marker-alt"></i>Kavundampalayam, Coimbatore</p>
                             <p><i class="fa fa-phone-alt"></i>+91 96290 52227</p>
                             <p><i class="fa fa-envelope"></i>mdcarcare.in@gmail.com</p>
                             <div class="footer-social">
